[package]
name = "yee-haw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
glob = "0.3.1"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.35"
tiny_id = "0.1.6"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
